--- a/Server/composer.json
+++ b/Server/composer.json
@@ -19,6 +19,7 @@
         "symfony/framework-bundle": "8.0.*",
         "symfony/property-access": "8.0.*",
         "symfony/property-info": "8.0.*",
+        "symfony/routing": "*",
         "symfony/runtime": "8.0.*",
         "symfony/security-bundle": "8.0.*",
         "symfony/serializer": "8.0.*",
