--- a/Client/package.json
+++ b/Client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@tailwindcss/vite": "^4.1.17",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "react": "^19.2.0",
