--- a/Server/composer.json
+++ b/Server/composer.json
@@ -23,6 +23,7 @@
         "symfony/runtime": "8.0.*",
         "symfony/security-bundle": "8.0.*",
         "symfony/serializer": "8.0.*",
+        "symfony/validator": "*",
         "symfony/yaml": "8.0.*",
         "web-token/jwt-bundle": "^4.1"
     },
