--- a/Client/package.json
+++ b/Client/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.561.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.68.0",
