--- a/Server/config/packages/security.yaml
+++ b/Server/config/packages/security.yaml
@@ -3,6 +3,11 @@ security:
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
 
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_MODERATOR, ROLE_USER]
+        ROLE_MODERATOR: [ROLE_USER]
+        ROLE_USER: []
+
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         users_in_memory: { memory: null }
@@ -24,6 +29,7 @@ security:
 
     # Note: Only the *first* matching rule is applied
     access_control:
+        - { path: ^/api/promo$, roles: ROLE_ADMIN, methods: [POST] }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
