fixed apache server deleting author header

--- a/Server/public/.htaccess
+++ b/Server/public/.htaccess
@@ -2,6 +2,7 @@
     RewriteEngine On
 
     # Redirect to front controller if file doesn't exist
+    CGIPassAuth On
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [QSA,L]
 </IfModule>
